- Multiple UI fixes
- "Try again" button on device limit reached screen does not work as expected
https://privatus.atlassian.net/browse/WC-1022

- Unnecessary empty space at south of the map
https://privatus.atlassian.net/browse/WC-1026

- Washington cutoff in the list of servers
https://privatus.atlassian.net/browse/WC-1033

--- a/src/components/scss/constants.scss
+++ b/src/components/scss/constants.scss
@@ -7,8 +7,19 @@ $base-text-color-details: rgba($base-text-color, 0.5);// #8494A5;
 
 .left_panel_block {
     min-height: 72px;
+    max-height: 72px;
     margin-left: 20px;
     margin-right: 20px;
+}
+
+.flexColumn {
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+}
+
+.flexRowRestSpace {
+    flex-grow: 1;
 }
 
 .flexRow {
@@ -45,3 +56,13 @@ button.link {
     @extend .noBordersTextBtn;
     color: #398FE6;
   }
+
+  div.scrollableColumnContainer {
+    display: flex;
+    flex-flow: column;
+    overflow: scroll;
+  }
+
+//div.scrollableColumnContainer::-webkit-scrollbar {
+//    display: none; // do not show scroll-bars
+//}
